[gd_scene load_steps=4 format=3 uid="uid://ctsx0pok1eoi0"]

[ext_resource type="Script" path="res://scripts/combat/Weapon.gd" id="1_siwdi"]
[ext_resource type="Texture2D" uid="uid://xqtpewd10cdn" path="res://icon.png" id="2_cfyvn"]
[ext_resource type="PackedScene" uid="uid://cwenxq7brxuot" path="res://scenes/weapons/Bullet.tscn" id="2_x7cbe"]

[node name="Weapon" type="Node2D"]
script = ExtResource( "1_siwdi" )
bullet_scene = ExtResource( "2_x7cbe" )

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(1, 0.0705882, 0, 1)
position = Vector2(14, 0)
scale = Vector2(0.68, 0.24)
texture = ExtResource( "2_cfyvn" )

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2(36, 0)

[node name="FireTimer" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]

[connection signal="timeout" from="FireTimer" to="." method="enable_shoot"]
[connection signal="timeout" from="ReloadTimer" to="." method="enable_shoot"]
